--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: Brian Shea Hedberg
 description: > # this means to ignore newlines until "baseurl:"
   My personal site.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://localhost:4000" # the base hostname & protocol for your site
+url: "http://gemfarmer.github.io/brianshedberg" # the base hostname & protocol for your site
 twitter_username: hedburglar
 github_username:  gemfarmer
 linkedin_username: brianshedberg
