--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: Brian Shea Hedberg
 # email: briansheahedberg@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   My personal site.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://gemfarmer.github.io/brianshedberg" # the base hostname & protocol for your site
+baseurl: "/brianshedberg" # the subpath of your site, e.g. /blog/
+url: "http://gemfarmer.github.io/" # the base hostname & protocol for your site
 twitter_username: hedburglar
 github_username:  gemfarmer
 linkedin_username: brianshedberg
