--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Brian Shea Hedberg
 # email: briansheahedberg@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   My personal site.
-baseurl: "/brianshedberg" # the subpath of your site, e.g. /blog/
+baseurl: "brianshedberg" # the subpath of your site, e.g. /blog/
 url: "http://gemfarmer.github.io/" # the base hostname & protocol for your site
 twitter_username: hedburglar
 github_username:  gemfarmer
